--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -21,6 +21,15 @@ on:
       - 'self.json'
 
 jobs:
+  asdf-parser:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v3
+      - uses: kachick/action-parse-asdf-tool-versions@v1
+        id: parse
+    outputs:
+      tool-versions: '${{ steps.parse.outputs.json }}'
   set-matrix:
     timeout-minutes: 1
     runs-on: ubuntu-latest
@@ -35,9 +44,9 @@ jobs:
           echo "::set-output name=value::${configs}"
 
   validate:
-    timeout-minutes: 5
-    needs: [set-matrix]
+    needs: [set-matrix, asdf-parser]
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
@@ -46,7 +55,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
           cache: npm
       - run: npm ci # `--ignore-scripts` do not cover RE2
       - run: RENOVATE_CONFIG_FILE=${{ matrix.config }} npx renovate-config-validator
