Trigger CI with updating own .tool-versions
https://github.com/kachick/renovate-config-asdf/pull/232

--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -10,6 +10,7 @@ on:
       - 'shard.lock'
       - 'package.json'
       - 'package-lock.json'
+      - '.tool-versions'
   pull_request:
     paths:
       - '.github/workflows/ci-crystal.yml'
@@ -19,6 +20,7 @@ on:
       - 'shard.lock'
       - 'package.json'
       - 'package-lock.json'
+      - '.tool-versions'
 
 jobs:
   asdf-parser:
