--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -10,6 +10,7 @@ on:
       - 'default.json'
       - 'renovate.json'
       - 'self.json'
+      - '.tool-versions'
   pull_request:
     paths:
       - '.github/workflows/ci-official.yml'
@@ -19,6 +20,7 @@ on:
       - 'default.json'
       - 'renovate.json'
       - 'self.json'
+      - '.tool-versions'
 
 jobs:
   asdf-parser:
