--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,6 @@
     "katjanakosic.vscode-json5",
     "crystal-lang-tools.crystal-lang",
     "veelenga.crystal-ameba",
-    "ms-vscode.makefile-tools"
+    "tamasfe.even-better-toml"
   ]
 }
