--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -74,7 +74,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chunked_plugins: ${{fromJson(needs.set-matrix.outputs.json_array)}}
+        chunked_plugins: '${{ fromJson(needs.set-matrix.outputs.json_array) }}'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
