--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -42,7 +42,7 @@ jobs:
       - id: set-matrix
         run: |
           config_by_line=$(git ls-files 'plugins' 'default.json' 'renovate.json')
-          echo configs="$(jq -cnM --arg var "$config_by_line" '$var|split("\n")')" | tee --append "$GITHUB_OUTPUT"
+          echo "configs=$(jq -cnM --arg var "$config_by_line" '$var|split("\n")')" | tee --append "$GITHUB_OUTPUT"
 
   validate:
     needs: [set-matrix, asdf-parser]
