--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -4,6 +4,7 @@ on:
     branches: [main]
     paths:
       - '.github/workflows/ci-official.yml'
+      - 'src/renovate_config_asdf/github_actions_helper.cr'
       - 'plugins/*.json5'
       - 'package.json'
       - 'package-lock.json'
@@ -14,6 +15,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/ci-official.yml'
+      - 'src/renovate_config_asdf/github_actions_helper.cr'
       - 'plugins/*.json5'
       - 'package.json'
       - 'package-lock.json'
@@ -32,31 +34,84 @@ jobs:
         id: parse
     outputs:
       tool-versions: '${{ steps.parse.outputs.json }}'
-  set-matrix:
-    timeout-minutes: 1
+
+  build-cli:
+    needs: [asdf-parser]
+    timeout-minutes: 5
     runs-on: ubuntu-latest
-    outputs:
-      configs: ${{ steps.set-matrix.outputs.json }}
     steps:
       - uses: actions/checkout@v3
+      - name: Cache CLI
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./bin/cli
+          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
+      - uses: crystal-lang/install-crystal@v1
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          crystal: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}'
+      # Currently shards is unused except ameba
+      # - run: shards install
+      - run: make build-tools
+        if: steps.cache.outputs.cache-hit != 'true'
+      - uses: actions/upload-artifact@v3
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          name: cli
+          path: ./bin/cli
+
+  set-matrix:
+    needs: [build-cli]
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    outputs:
+      json: ${{ steps.set-matrix.outputs.json }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Cache CLI
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./bin/cli
+          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
+      - run: mkdir -p ./bin
+      - uses: actions/download-artifact@v3
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          name: cli
+          path: ./bin/
+      # https://github.com/actions/upload-artifact/issues/38
+      - run: chmod 755 ./bin/cli
       - id: set-matrix
-        run: |
-          config_by_line=$(git ls-files 'plugins' 'default.json' 'renovate.json')
-          echo "json=$(jq -cnM --arg var "$config_by_line" '$var|split("\n")')" | tee --append "$GITHUB_OUTPUT"
+        run: echo "json=$(git ls-files 'plugins' 'default.json' 'renovate.json' | ./bin/cli generate_matrix --matrix_chunk_size=15)" | tee --append "$GITHUB_OUTPUT"
 
   validate:
-    needs: [set-matrix, asdf-parser]
+    needs: [set-matrix, asdf-parser, build-cli]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     strategy:
       fail-fast: false
       matrix:
-        config: ${{ fromJson(needs.set-matrix.outputs.configs )}}
+        chunked_plugins: ${{ fromJson(needs.set-matrix.outputs.json) }}
     steps:
       - uses: actions/checkout@v3
+      - name: Cache CLI
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./bin/cli
+          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
+      - run: mkdir -p ./bin
+      - uses: actions/download-artifact@v3
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          name: cli
+          path: ./bin/
+      - run: chmod 755 ./bin/cli
       - uses: actions/setup-node@v3
         with:
           node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
           cache: npm
       - run: npm ci # `--ignore-scripts` do not cover RE2
-      - run: RENOVATE_CONFIG_FILE=${{ matrix.config }} npx renovate-config-validator
+      - run: ./bin/cli validate --globs='${{ matrix.chunked_plugins }}'
