--- a/.github/workflows/ci-crystal.yml
+++ b/.github/workflows/ci-crystal.yml
@@ -47,8 +47,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Cache ameba
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ./bin/ameba
+          key: ${{ runner.os }}-${{ hashFiles('shard.lock') }}-ameba
       - uses: crystal-lang/install-crystal@v1
+        if: steps.cache.outputs.cache-hit != 'true'
         with:
           crystal: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}'
       - run: shards install
+        if: steps.cache.outputs.cache-hit != 'true'
       - run: make crystal-lint-check
