--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -46,13 +46,13 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./bin/cli
-          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
+          key: cli-${{ runner.os }}-crystal_${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}-${{ hashFiles('src/**', 'shards.yml', 'shards/lock') }}
       - uses: crystal-lang/install-crystal@v1
         if: steps.cache.outputs.cache-hit != 'true'
         with:
           crystal: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}'
-      # Currently shards is unused except ameba
-      # - run: shards install
+      - run: shards install --production
+        if: steps.cache.outputs.cache-hit != 'true'
       - run: make build-tools
         if: steps.cache.outputs.cache-hit != 'true'
       - uses: actions/upload-artifact@v3
@@ -62,7 +62,7 @@ jobs:
           path: ./bin/cli
 
   set-matrix:
-    needs: [build-cli]
+    needs: [asdf-parser, build-cli]
     timeout-minutes: 5
     runs-on: ubuntu-latest
     outputs:
@@ -74,8 +74,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./bin/cli
-          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
-      - run: mkdir -p ./bin
+          key: cli-${{ runner.os }}-crystal_${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}-${{ hashFiles('src/**', 'shards.yml', 'shards/lock') }}
       - uses: actions/download-artifact@v3
         if: steps.cache.outputs.cache-hit != 'true'
         with:
@@ -101,8 +100,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./bin/cli
-          key: ${{ runner.os }}-${{ hashFiles('src/**') }}-cli
-      - run: mkdir -p ./bin
+          key: cli-${{ runner.os }}-crystal_${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}-${{ hashFiles('src/**', 'shards.yml', 'shards/lock') }}
       - uses: actions/download-artifact@v3
         if: steps.cache.outputs.cache-hit != 'true'
         with:
