--- a/plugins/clojure.json5
+++ b/plugins/clojure.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)clojure (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)clojure (?<currentValue>\\S+)"],
       // https://github.com/clojure/brew-install/tags
       "depNameTemplate": "clojure/brew-install",
       "datasourceTemplate": "github-tags",
