--- a/plugins/scala.json5
+++ b/plugins/scala.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)scala (?<currentValue>2\\..+?)\\n"],
+      "matchStrings": ["(^|\\n)scala (?<currentValue>2\\.\\S+)"],
       // https://github.com/scala/scala/tags
       "depNameTemplate": "scala/scala",
       "datasourceTemplate": "github-tags",
@@ -12,7 +12,7 @@
     },
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)scala (?<currentValue>3\\..+?)\\n"],
+      "matchStrings": ["(^|\\n)scala (?<currentValue>3\\.\\S+)"],
       // https://github.com/lampepfl/dotty/tags
       "depNameTemplate": "lampepfl/dotty",
       "datasourceTemplate": "github-tags"
