--- a/plugins/terraform.json5
+++ b/plugins/terraform.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)terraform (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)terraform (?<currentValue>\\S+)"],
       // https://github.com/hashicorp/terraform/tags
       "depNameTemplate": "hashicorp/terraform",
       "datasourceTemplate": "github-tags",
