--- a/plugins/trivy.json5
+++ b/plugins/trivy.json5
@@ -4,7 +4,7 @@
   "regexManagers": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)trivy (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)trivy (?<currentValue>\\S+)"],
       "depNameTemplate": "aquasecurity/trivy",
       "datasourceTemplate": "github-tags",
       "extractVersionTemplate": "^v(?<version>\\S+)"
