--- a/spec/fixtures/ruby-invalid.json5
+++ b/spec/fixtures/ruby-invalid.json5
@@ -4,7 +4,7 @@
   "regexManagers42": [
     {
       "fileMatch": ["\\.tool-versions$"],
-      "matchStrings": ["(^|\\n)ruby (?<currentValue>.+?)\\n"],
+      "matchStrings": ["(^|\\n)ruby (?<currentValue>\\S+)"],
       "depNameTemplate": "ruby-version",
       "datasourceTemplate": "ruby-version"
     }
