--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "katjanakosic.vscode-json5",
     "crystal-lang-tools.crystal-lang",
     "veelenga.crystal-ameba",
-    "ms-vscode.makefile-tools"
+    "ms-vscode.makefile-tools",
+    "dbaeumer.vscode-eslint"
   ]
 }
