--- a/.github/workflows/ci-tool-versions.yml
+++ b/.github/workflows/ci-tool-versions.yml
@@ -10,7 +10,9 @@ jobs:
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v3
-      - id: format-only-new-versions
+      - run: git fetch origin ${{ github.base_ref }} --depth=1
+      - name: Re-format only changed .tool-versions
+        id: format-only-new-versions
         # Do not use `echo json=$(script)` syntax here. The script generates multilines.
         run: |
           echo 'json=' | tee --append $GITHUB_OUTPUT
