--- a/.github/workflows/lint-definition.yml
+++ b/.github/workflows/lint-definition.yml
@@ -1,14 +1,16 @@
-name: Lint
+name: Lint - definitions
 on:
   push:
     branches: [main]
     paths-ignore:
       - 'LICENSE'
       - '.vscode'
+      - '**/*.md'
   pull_request:
     paths-ignore:
       - 'LICENSE'
       - '.vscode'
+      - '**/*.md'
 jobs:
   asdf-parser:
     runs-on: ubuntu-latest
@@ -19,15 +21,6 @@ jobs:
         id: parse
     outputs:
       tool-versions: '${{ steps.parse.outputs.json }}'
-  dprint:
-    needs: [asdf-parser]
-    timeout-minutes: 5
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dprint/check@v2.1
-        with:
-          dprint-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).dprint }}'
   definitions:
     needs: [asdf-parser]
     timeout-minutes: 5
