Disable official asdf manager in this repo to make stable test
https://docs.renovatebot.com/modules/manager/

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     "github>kachick/renovate-config-dprint:plugins",
     "local>kachick/renovate-config-asdf"
   ],
+  "enabledManagers": ["npm", "github-actions", "regex"],
   "packageRules": [
     {
       "matchPackagePatterns": [
