--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
           cache: npm
-      - run: npm ci # `--ignore-scripts` do not cover RE2
+      - run: npm ci --legacy-peer-deps # `--ignore-scripts` do not cover RE2
       # renovate.json will always tested by the CLI
       - run: RENOVATE_CONFIG_FILE=default.json npx renovate-config-validator
       - run: RENOVATE_CONFIG_FILE=self.json npx renovate-config-validator
