Prefer `as const` with TypeScript 4.9 introduced `satisfies` (#415)
* Prefer `as const` with TypeScript 4.9 introduced `satisfies`

https://github.com/microsoft/TypeScript/issues/47920
https://devblogs.microsoft.com/typescript/announcing-typescript-4-9-rc/#satisfies

* `npm install --save-dev @typescript-eslint/eslint-plugin@5.44.1-alpha.6 && npm install --save-dev @typescript-eslint/parser@5.44.1-alpha.6`

* `npm install --save-dev --legacy-peer-deps @typescript-eslint/eslint-plugin@5.44.1-alpha.6 @typescript-eslint/parser@5.44.1-alpha.6`

* https://github.com/npm/cli/issues/4998

* Need here too

* Add TODO comments

--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -38,7 +38,8 @@ jobs:
         with:
           node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
           cache: npm
-      - run: npm ci
+      # TODO: Revert `--legacy-peer-deps` after typescript-eslint released 5.44.1 or later. See https://github.com/kachick/renovate-config-asdf/pull/415
+      - run: npm ci --legacy-peer-deps
       - run: npx tsc
       - run: make eslint-check
       - run: npx ts-node-test test/*.ts
