--- a/.github/workflows/ci-typescript.yml
+++ b/.github/workflows/ci-typescript.yml
@@ -38,8 +38,7 @@ jobs:
         with:
           node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
           cache: npm
-      # TODO: Revert `--legacy-peer-deps` after typescript-eslint released 5.44.1 or later. See https://github.com/kachick/renovate-config-asdf/pull/415
-      - run: npm ci --legacy-peer-deps
+      - run: npm ci
       - run: npx tsc
       - run: make eslint-check
       - run: npx ts-node-test test/*.ts
