--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,10 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "dependencyDashboard": true,
   "extends": ["config:base", "github>kachick/renovate-config-dprint:plugins", "local>kachick/renovate-config-asdf"],
-  "enabledManagers": ["npm", "github-actions", "regex"],
+  "enabledManagers": ["npm", "nix", "github-actions", "regex"],
+  "nix": {
+    "enabled": true
+  },
   "packageRules": [
     {
       "matchPackagePatterns": ["*"],
