--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
+          node-version: '18.13.0'
           cache: npm
       - run: npm ci
       # renovate.json will always tested by the CLI
