--- a/.github/workflows/lint-definition.yml
+++ b/.github/workflows/lint-definition.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: crystal-lang/install-crystal@v1
         with:
-          crystal: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).crystal }}'
+          crystal: '1.7.1'
       - run: shards install --production
       - run: crystal run src/cli.cr -- lint
