--- a/.github/workflows/lint-dprint.yml
+++ b/.github/workflows/lint-dprint.yml
@@ -17,4 +17,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.1
         with:
-          dprint-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).dprint }}'
+          dprint-version: '0.34.4'
