Start using Nix (#647)
* Bump to 1.3.1, however still incompatible with crystal 1.7.1

https://github.com/crystal-ameba/ameba/blob/e58f90009f8b08c5b6ee1fa3d36641e89972f6db/shard.yml#L18

--- a/.github/workflows/ci-official.yml
+++ b/.github/workflows/ci-official.yml
@@ -21,25 +21,14 @@ on:
       - '.tool-versions'
 
 jobs:
-  asdf-parser:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: kachick/action-parse-asdf-tool-versions@v3
-        id: parse
-    outputs:
-      tool-versions: '${{ steps.parse.outputs.json }}'
-
   validate:
-    needs: [asdf-parser]
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).nodejs }}'
+          node-version: '18.13.0'
           cache: npm
       - run: npm ci
       # renovate.json will always tested by the CLI
