--- a/.github/workflows/lint-dprint.yml
+++ b/.github/workflows/lint-dprint.yml
@@ -10,21 +10,11 @@ on:
       - 'LICENSE'
       - '.vscode'
 jobs:
-  asdf-parser:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: kachick/action-parse-asdf-tool-versions@v3
-        id: parse
-    outputs:
-      tool-versions: '${{ steps.parse.outputs.json }}'
   dprint:
-    needs: [asdf-parser]
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.1
         with:
-          dprint-version: '${{ fromJson(needs.asdf-parser.outputs.tool-versions).dprint }}'
+          dprint-version: '0.34.4'
