Use github-releases for trivy source
I found this in #694 CI

Updates #95

--- a/plugins/trivy.json5
+++ b/plugins/trivy.json5
@@ -6,7 +6,7 @@
       "fileMatch": ["\\.tool-versions$"],
       "matchStrings": ["(^|\\n)trivy (?<currentValue>\\S+)"],
       "depNameTemplate": "aquasecurity/trivy",
-      "datasourceTemplate": "github-tags",
+      "datasourceTemplate": "github-releases",
       "extractVersionTemplate": "^v(?<version>\\S+)"
     }
   ]
